tests/for_each/_faulty_func_param_count.sy
from std use (for_each, print)

f :: fn a:int, b:int {
    print a
    print b
}
start :: fn {
    [1, 2] -> for_each(f)
}
// error: _
